make project clean by adding ESLint and Prettier and more other stuff

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "instagram",
+  "name": "instagram-clone",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "B3ns44d",
+    "email": "abdsamad23bnsaad@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --config .prettierrc.json '**/*.(ts|tsx|js)' --write"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -14,9 +19,28 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.29",
-    "eslint": "8.0.0",
+    "@babel/core": "^7.15.8",
+    "@types/node": "^16.10.5",
+    "@types/react": "^17.0.29",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.3.7",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "postcss": "^8.3.9",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.4"
   }
 }
