:sparkles: feat: app header & fix: eslint config
add main header & fix some eslint/prettier config

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --config .prettierrc.json '**/*.(ts|tsx|js)' --write"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
+    "ahooks": "^2.10.11",
+    "clsx": "^1.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -35,7 +38,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
     "postcss": "^8.3.9",
