--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,7 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
-  "singleQuote": true,
-  "tabWidth": 2,
-  "useTabs": false,
-  "endOfLine": "auto"
+	"semi": true,
+	"trailingComma": "es5",
+	"singleQuote": true,
+	"tabWidth": 2,
+	"useTabs": true
 }
