--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@heroicons/react": "^1.0.4",
     "ahooks": "^2.10.11",
     "clsx": "^1.1.1",
+    "faker": "^5.5.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
