--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.4",
     "ahooks": "^2.10.11",
     "clsx": "^1.1.1",
     "faker": "^5.5.3",
