--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^1.1.1",
     "faker": "^5.5.3",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwind-scrollbar-hide": "^1.0.3"
