--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "ahooks": "^2.10.11",
     "clsx": "^1.1.1",
     "faker": "^5.5.3",
+    "firebase": "^9.1.3",
     "next": "11.1.2",
-    "next-auth": "^3.29.0",
+    "next-auth": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sqlite3": "^5.0.2",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
