--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recoil": "^0.4.1",
     "sqlite3": "^5.0.2",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
