--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,10 @@
                     "@hooks": "./src/hooks/",
                     "@layout": "./src/layout/",
                     "@services": "./src/services/",
-                    "@shared": "./src/shared/"
+                    "@shared": "./src/shared/",
+                    "@atoms/*": [
+                        "./src/atoms/*"
+                    ]
                 }
             }
         ]
