--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --config .prettierrc.json '**/*.(ts|tsx|js)' --write"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.4",
     "ahooks": "^2.10.11",
