--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,29 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["es6", "dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "ESNEXT",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["./src/shared/components/*"],
-      "@containers/*": ["./src/containers/*"],
-      "@hooks/*": ["./src/hooks/*"],
-      "@layout/*": ["./src/layout/*"],
-      "@services/*": ["./src/services/*"],
-      "@shared/*": ["./src/shared/*"]
-    }
-  },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js"]
+	"compilerOptions": {
+		"target": "ES2017",
+		"lib": ["es6", "dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"strict": false,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"module": "ESNEXT",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"baseUrl": ".",
+		"paths": {
+			"@components/*": ["./src/shared/components/*"],
+			"@containers/*": ["./src/containers/*"],
+			"@hooks/*": ["./src/hooks/*"],
+			"@layout/*": ["./src/layout/*"],
+			"@services/*": ["./src/services/*"],
+			"@shared/*": ["./src/shared/*"],
+			"@atoms/*": ["./src/atoms/*"]
+		}
+	},
+	"exclude": ["node_modules"],
+	"include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js"]
 }
